--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <title>Lets Try</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script type="application/javascript" src="js/script.js" defer></script>
 </head>
 <body>
+    <h1>Lets try</h1>
+    <p>Lets try</p>
     
 </body>
 </html>
