--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
     <title>Document</title>
     <title>Lets Try</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <script type="application/javascript" src="js/script.js" defer></script>
+    <script type="application/javascript" src="js/scripts.js" defer></script>
 </head>
 <body>
     <h1>Lets try</h1>
-    <p>Lets try</p>
+    <nav>
+        <h2>Website Nav</h2>
+        <ul>
+            <li>
+                <a href="index.html">
+                HOME </a>
+            </li>
+            <li><a href="box-model.html">
+                Box Model </a>
+            </li>
+        </ul>
+    </nav>
     
 </body>
 </html>
