--- a/box-model.html
+++ b/box-model.html
@@ -10,6 +10,7 @@
     <h1> Box Model</h1>
     <p>
         <a href="index.html">Click here</a>
+        to return to home page
     </p>
     <div id="box-model" aria-role="presentation"></div>
     
