--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Lets try</h1>
     <nav>
-        <h2>Website Nav</h2>
+        <h2 class="screen-reader-text">Website Navigation</h2>
         <ul>
             <li>
                 <a href="index.html">
